new commit abhi

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="category">Ilustration</div>
         <div class="heading">
           A heading that must span over two lines
-          <div class="author">By <span class="name">Abi</span> 4 days ago</div>
+          <div class="author">By <span class="name">Abhi</span> 4 days ago</div>
         </div>
       </div>
 
@@ -71,7 +71,7 @@
         <div class="category">Illustration</div>
         <div class="heading">
           A heading that must span over two lines
-          <div class="author">By <span class="name">Abi</span> 4 days ago</div>
+          <div class="author">By <span class="name">Abhi</span> 4 days ago</div>
         </div>
       </div>
 
@@ -80,7 +80,7 @@
         <div class="category">Illustration</div>
         <div class="heading">
           A heading that must span over two lines
-          <div class="author">By <span class="name">Abi</span> 4 days ago</div>
+          <div class="author">By <span class="name">Abhi</span> 4 days ago</div>
         </div>
       </div>
     </div>
